+ Added Allow Sprinting to No Slow.
+ Added Amount to Notifications.
+ Added Speed to Phase.
+ Added No Clip to Phase.
+ Added NCP Low to Speed.
+ Added Move Tower to Scaffold.
+ Added Normal2 Rotations to Scaffold.
+ Added Ticks to Velocity.

/ Made Config System a bit better.
/ Improved Notification System.
/ Fixed modules moving random places in ClickGUI.
/ Fixed Top in Enabled Modules.
/ Changed ClickGui Category Icons.
/ Fixed a few Main Menu and Alt Manager visuals.
/ Separated Auto Pot from Auto Heal again lol.
/ Fixed Inventory Manager dropping all at once.

/ Made settings hide if not used (some atleast)

This update is to clean my shitty code a bit.