@@ -4,6 +4,7 @@ import client.rapid.event.events.Event;
 import client.rapid.event.events.game.EventPacket;
 import client.rapid.event.events.player.EventCollide;
 import client.rapid.event.events.player.EventMotion;
+import client.rapid.event.events.player.EventUpdate;
 import client.rapid.module.Module;
 import client.rapid.module.ModuleInfo;
 import client.rapid.module.modules.Category;
@@ -34,27 +35,25 @@ public class NoFall extends Module {
 				event.setBoundingBox(new AxisAlignedBB(-5, -1, -5, 5, 1, 5).offset(event.getX(), event.getY(), event.getZ()));
 			}
 		}
-		if(e instanceof EventPacket && e.isPre()) {
-			EventPacket event = (EventPacket)e;
+		if(e instanceof EventUpdate && e.isPre()) {
+			EventUpdate event = (EventUpdate)e;
 
-			switch(mode.getMode()) {
-			case "Vulcan":
-		        if(event.getPacket() instanceof C03PacketPlayer && !event.isIncoming()) {
-		        	C03PacketPlayer packet = event.getPacket();
+			if(isEnabled("Long Jump") && getMode("Long Jump", "Mode").equals("Vulcan"))
+				return;
 
-					if(isEnabled("Long Jump") && getMode("Long Jump", "Mode").equals("Vulcan"))
-						return;
+			if(mode.getMode().equals("Vulcan") && mc.thePlayer.fallDistance >= 3) {
+				if(mc.thePlayer.ticksExisted % 2 == 0)
+						mc.thePlayer.motionY = -0.1476;
+					else
+						mc.thePlayer.motionY = -0.0975;
 
-					if(mc.thePlayer.fallDistance >= distance.getValue()) {
-						if(!mc.thePlayer.onGround) {
-							mc.thePlayer.fallDistance = -0.1f;
-							mc.thePlayer.motionY = -0.1;
-						}
-						packet.setOnGround(!packet.isOnGround());
-					}
-		        }
-				break;
+				if(mc.thePlayer.ticksExisted % 11 == 0) {
+					if(mc.thePlayer.ticksExisted % 5.5 == 0)
+						mc.thePlayer.onGround = true;
+				}
+
 			}
+
 		}
 		if(e instanceof EventMotion && e.isPre()) {
 			setTag(mode.getMode());
